# views-pipeline-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: prevent_merge_when_branch_behind.yml  publish_package.yml  run_pytest.yml
documentation/: README.md  minimal_viable_product_description.md
documentation/ADRs/: 001_local_data_storage.md  004_prediction_naming_convention.md  006_model_specific_inputdata_querysets.md  008_no_jupyter_notebooks_in_production.md  010_evaluation_metrics.md  012_artifact_naming_convention.md  013_output_naming_convention.md  022_model_catalogs.md  023_production_development.md  024_development_and_production_sync.md  028_ingester_emergency_solution.md
tests/: test_cli_utils.py  test_data_utils.py  test_ensemble_manager.py  test_ensemble_path.py  test_ensemble_path_manager.py  test_ensemble_reconcilation.py  test_evaluation_metrics.py  test_files_utils.py  test_global_cache.py  test_logging_manager.py  test_model_manager.py  test_model_outputs.py  test_model_path.py  test_model_path_manager.py  test_views_dataset.py  test_wandb_utils.py
views_pipeline/cache/: global_cache.py
views_pipeline_core/cache/: global_cache.py
views_pipeline_core/cli/: README.md  utils.py
views_pipeline_core/configs/: __init__.py  drift_detection.py  pipeline.py  pipeline_config.py
views_pipeline_core/data/: README.md  __init__.py  comparator.py  country.py  dataloaders.py  handlers.py  monitors.py  statistics.py  utils.py
views_pipeline_core/ensembles/: check.py  reconciliation.py
views_pipeline_core/evaluation/: metrics.py
(+60 files in other folders)
